--- a/skins/stompesi/css/common.css
+++ b/skins/stompesi/css/common.css
@@ -1,11 +1,8 @@
-
-
 .chapter-container {
   width: 100%;
   display: block;
   height: 30px;
   position: relative;
-  /*background: #5F5F5F;*/
   
   -webkit-box-shadow: 0px 6px 8px -5px rgba(184,178,184,1);
   -moz-box-shadow: 0px 6px 8px -5px rgba(184,178,184,1);
@@ -17,8 +14,6 @@
   padding-bottom: 5px;
   font-size: 15px;
 }
-
-
 
 .panel {
   margin-bottom: 0px !important;
@@ -126,18 +121,16 @@ hr {
 
 .chapter-title {
   padding-left: 15px;
-  font-size: 30px;
-  font-weight: bold;
-  border: 1px solid #FF5252;
-  border-radius: 5px;
-  background: #FF5252;
-  color: white;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: 20px;
+    font-weight: bold;
+    border: 1px solid #FF5252;
+    border-radius: 10px;
+    background: #FF5252;
+    color: white;
 }
 
-/*
-width: 100% !important; 
-  height: calc(100% - 40px); 
-  position: table;*/
 .container {
   width: 100% !important; 
   margin-top: -22px;
