--- a/skins/stompesi/css/common.css
+++ b/skins/stompesi/css/common.css
@@ -1,3 +1,7 @@
+
+
+
+
 .chapter-container {
   width: 100%;
   display: block;
@@ -23,18 +27,19 @@
   padding: 5px 10px !important;
 }
 
-.panel-danger {
-  border-color: #F0F0F0 !important;
+.panel-default {
+  border-color: rgba(159,168,218, 0.65) !important;
+  height: 100%;
 }
 
-.panel-danger>.panel-heading {
+.panel-default > .panel-heading {
   color: white !important;
-  background-color: #FF5252 !important;
-  border-color: #F0F0F0 !important;
+  background-color: #5C6BC0 !important;
   padding: 3px 15px;
 }
 
 hr {
+  border-top: 1px solid rgba(159,168,218, 0.65) !important;
   margin-top: 5px !important;;
   margin-bottom: 5px !important;;
 }
@@ -72,7 +77,7 @@ hr {
 
 .control-panel-container {
   float: left; 
-  width: calc(20% - 10px); 
+  width: calc(50% - 15px); 
   margin-right: 10px;
 }
 
@@ -90,13 +95,10 @@ hr {
 
 .description-container {
   float: left; 
-  width: calc(80% - 20px); 
+  width: calc(50% - 15px);
   margin-left: 10px; 
   margin-right: 10px;
-}
-
-.description-container .panel-body {
-  min-height: 150px;
+  height: 100%;
 }
 
 
@@ -125,16 +127,15 @@ hr {
     margin-bottom: 10px;
     font-size: 20px;
     font-weight: bold;
-    border: 1px solid #FF5252;
     border-radius: 10px;
-    background: #FF5252;
+    background: #5C6BC0;
     color: white;
 }
 
 .container {
   width: 100% !important; 
-  margin-top: -22px;
-  height: calc(100% - 114px);
+  margin-top: -20px;
+  height: calc(100% - 118px);
   padding-right: 0px !important;
   padding-left: 0px !important; 
   margin-right: 0px !important; 
@@ -157,9 +158,13 @@ hr {
 .information-container {
   height: 15%; 
   width: 100%; 
-  display: table;
 }
 
-.nav-pills>li.active>a, .nav-pills>li.active>a:focus, .nav-pills>li.active>a:hover {
-  background-color: #FF5252 !important;
+.nav .open>a, .nav .open>a:focus, .nav .open>a:hover {
+  background: #5C6BC0 !important;
+  color: white !important;
+}
+
+.nav>li>a:focus {
+  /*background: white !important;*/
 }
