--- a/skins/stompesi/css/common.css
+++ b/skins/stompesi/css/common.css
@@ -1,7 +1,3 @@
-
-
-
-
 .chapter-container {
   width: 100%;
   display: block;
@@ -24,7 +20,7 @@
 }
 
 .panel-body {
-  padding: 5px 10px !important;
+  padding: 5px !important;
 }
 
 .panel-default {
@@ -78,7 +74,7 @@ hr {
 .control-panel-container {
   float: left; 
   width: calc(50% - 15px); 
-  margin-right: 10px;
+  height: 100%;
 }
 
 .control-panel-container a{
@@ -110,7 +106,8 @@ hr {
   float: left; 
   height: 100%; 
   width: calc(50% - 5px); 
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  border: 1px solid rgba(159,168,218, 0.65) !important;
+  border-radius: 4px;
 }
 
 #result {
@@ -118,7 +115,8 @@ hr {
   height: 100%; 
   margin-left: 10px; 
   width: calc(50% - 5px); 
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  border: 1px solid rgba(159,168,218, 0.65) !important;
+  border-radius: 4px;
 }
 
 .chapter-title {
@@ -163,8 +161,4 @@ hr {
 .nav .open>a, .nav .open>a:focus, .nav .open>a:hover {
   background: #5C6BC0 !important;
   color: white !important;
-}
-
-.nav>li>a:focus {
-  /*background: white !important;*/
 }
